[gd_scene load_steps=5 format=3 uid="uid://b6tg1l8pm2s2s"]

[ext_resource type="Script" path="res://scenes/cutscene_manager/cutscene_manager.gd" id="1_ga68m"]
[ext_resource type="Texture2D" uid="uid://dlyo61nh7yvpf" path="res://icon.svg" id="2_y3anq"]
[ext_resource type="FontFile" uid="uid://cb0ghp4306be5" path="res://assets/fonts/Kenney Pixel.ttf" id="3_u6uey"]
[ext_resource type="FontFile" uid="uid://dx0leo3qtvu16" path="res://assets/fonts/Kenney Mini.ttf" id="4_8ur1f"]

[node name="CutsceneManager" type="Node2D"]
script = ExtResource("1_ga68m")
metadata/_edit_lock_ = true

[node name="ColorRect2" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 960.0
color = Color(0.21202, 0.243768, 0.588114, 1)

[node name="Background" type="TextureRect" parent="."]
offset_right = 640.0
offset_bottom = 480.0
texture = ExtResource("2_y3anq")
expand_mode = 2
metadata/_edit_lock_ = true

[node name="SpawnPositions" type="VBoxContainer" parent="."]
offset_right = 640.0
offset_bottom = 480.0
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Row1" type="HBoxContainer" parent="SpawnPositions"]
layout_mode = 2
size_flags_vertical = 3

[node name="Column1" type="TextureRect" parent="SpawnPositions/Row1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row1/Column1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Column2" type="TextureRect" parent="SpawnPositions/Row1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row1/Column2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Column3" type="TextureRect" parent="SpawnPositions/Row1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row1/Column3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Column4" type="TextureRect" parent="SpawnPositions/Row1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row1/Column4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Column5" type="TextureRect" parent="SpawnPositions/Row1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row1/Column5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Column6" type="TextureRect" parent="SpawnPositions/Row1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row1/Column6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Row2" type="HBoxContainer" parent="SpawnPositions"]
layout_mode = 2
size_flags_vertical = 3

[node name="Column1" type="TextureRect" parent="SpawnPositions/Row2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row2/Column1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Column2" type="TextureRect" parent="SpawnPositions/Row2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row2/Column2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Column3" type="TextureRect" parent="SpawnPositions/Row2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row2/Column3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Column4" type="TextureRect" parent="SpawnPositions/Row2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row2/Column4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Column5" type="TextureRect" parent="SpawnPositions/Row2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row2/Column5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Column6" type="TextureRect" parent="SpawnPositions/Row2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row2/Column6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Row3" type="HBoxContainer" parent="SpawnPositions"]
layout_mode = 2
size_flags_vertical = 3

[node name="Column1" type="TextureRect" parent="SpawnPositions/Row3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row3/Column1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Column2" type="TextureRect" parent="SpawnPositions/Row3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row3/Column2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Column3" type="TextureRect" parent="SpawnPositions/Row3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row3/Column3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Column4" type="TextureRect" parent="SpawnPositions/Row3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row3/Column4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Column5" type="TextureRect" parent="SpawnPositions/Row3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row3/Column5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Column6" type="TextureRect" parent="SpawnPositions/Row3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row3/Column6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Row4" type="HBoxContainer" parent="SpawnPositions"]
layout_mode = 2
size_flags_vertical = 3

[node name="Column1" type="TextureRect" parent="SpawnPositions/Row4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row4/Column1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Column2" type="TextureRect" parent="SpawnPositions/Row4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row4/Column2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Column3" type="TextureRect" parent="SpawnPositions/Row4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row4/Column3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Column4" type="TextureRect" parent="SpawnPositions/Row4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row4/Column4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Column5" type="TextureRect" parent="SpawnPositions/Row4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row4/Column5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Column6" type="TextureRect" parent="SpawnPositions/Row4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawningPoint" type="Control" parent="SpawnPositions/Row4/Column6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Characters" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 32.0
offset_top = 512.0
offset_right = 608.0
offset_bottom = 928.0
color = Color(0.419608, 0.419608, 0.419608, 0.654902)

[node name="Title" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 560.0
offset_bottom = 64.0
theme_override_colors/font_shadow_color = Color(0.187176, 0.187176, 0.187176, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("3_u6uey")
theme_override_font_sizes/font_size = 40
text = "Nome de quem ta falando"
vertical_alignment = 1

[node name="Text" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 16.0
offset_top = 72.0
offset_right = 2736.0
offset_bottom = 1632.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_shadow_color = Color(0.188235, 0.188235, 0.188235, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("4_8ur1f")
theme_override_font_sizes/font_size = 128
text = "Texto placeholder. É possível ler."
autowrap_mode = 3

[node name="NextButton" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 456.0
offset_top = 24.0
offset_right = 560.0
offset_bottom = 55.0
text = "PRÓXIMO"

[connection signal="pressed" from="ColorRect/NextButton" to="." method="_on_next_button_pressed"]
